parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMA ID globalTable PUNTOYCOMA declaration programFunc main
Rule 2     globalTable -> <empty>
Rule 3     programFunc -> function programFunc
Rule 4     programFunc -> <empty>
Rule 5     main -> mainTable PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE declaration statement RIGHTBRACE
Rule 6     mainTable -> <empty>
Rule 7     assignment -> ID dimArray IGUAL hyperExpression PUNTOYCOMA
Rule 8     declaration -> VAR declarationPrim
Rule 9     declaration -> <empty>
Rule 10    declarationPrim -> primitive vars PUNTOYCOMA declarationPrim
Rule 11    declarationPrim -> <empty>
Rule 12    primitive -> INT
Rule 13    primitive -> FLOAT
Rule 14    primitive -> CHAR
Rule 15    return -> REGRESA LEFTPAR hyperExpression RIGHTPAR PUNTOYCOMA
Rule 16    if -> SI LEFTPAR hyperExpression RIGHTPAR createJumpQuadIf ENTONCES LEFTBRACE statement RIGHTBRACE ifElse updateJumpQuad
Rule 17    createJumpQuadIf -> <empty>
Rule 18    updateJumpQuad -> <empty>
Rule 19    ifElse -> SINO createJumpQuadElse LEFTBRACE statement RIGHTBRACE
Rule 20    ifElse -> <empty>
Rule 21    createJumpQuadElse -> <empty>
Rule 22    comment -> COMMENT_TEXT
Rule 23    while -> MIENTRAS pushLoopJump LEFTPAR hyperExpression RIGHTPAR beginLoopAction LEFTBRACE statement RIGHTBRACE endLoopAction
Rule 24    pushLoopJump -> <empty>
Rule 25    beginLoopAction -> <empty>
Rule 26    endLoopAction -> <empty>
Rule 27    for -> PARA forAssignment HASTA insertJumpFor hyperExpression createQuadFor LEFTBRACE statement RIGHTBRACE updateQuadFor
Rule 28    insertJumpFor -> <empty>
Rule 29    createQuadFor -> <empty>
Rule 30    updateQuadFor -> <empty>
Rule 31    forAssignment -> ID IGUAL CST_INT addTypeInt
Rule 32    vars -> ID addVarsToTable varsArray varsComa
Rule 33    addVarsToTable -> <empty>
Rule 34    varsComa -> COMA vars
Rule 35    varsComa -> <empty>
Rule 36    varsArray -> LEFTBRACK CST_INT addTypeInt RIGHTBRACK setRows varsMatrix
Rule 37    varsArray -> <empty>
Rule 38    setRows -> <empty>
Rule 39    varsMatrix -> LEFTBRACK CST_INT addTypeInt RIGHTBRACK setCols
Rule 40    varsMatrix -> <empty>
Rule 41    setCols -> <empty>
Rule 42    function -> functionType ID addFuncToDir LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE
Rule 43    addFuncToDir -> <empty>
Rule 44    functionType -> FUNCION primitive
Rule 45    functionType -> FUNCION VOID setVoidType
Rule 46    setVoidType -> <empty>
Rule 47    param -> primitive ID addFuncParams functionParam
Rule 48    param -> <empty>
Rule 49    addFuncParams -> <empty>
Rule 50    setParamLength -> <empty>
Rule 51    functionParam -> COMA param
Rule 52    functionParam -> <empty>
Rule 53    cst_prim -> CST_INT addTypeInt
Rule 54    cst_prim -> CST_FLOAT addTypeFloat
Rule 55    cst_prim -> CST_CHAR addTypeChar
Rule 56    addTypeInt -> <empty>
Rule 57    addTypeFloat -> <empty>
Rule 58    addTypeChar -> <empty>
Rule 59    hyperExpression -> superExpression evaluateHE opHyperExpression hyperExpressionNested
Rule 60    hyperExpression -> superExpression opMatrix evaluateOpMatrix
Rule 61    hyperExpression -> superExpression evaluateHE
Rule 62    hyperExpressionNested -> superExpression evaluateHE opHyperExpression hyperExpressionNested
Rule 63    hyperExpressionNested -> superExpression evaluateHE
Rule 64    evaluateOpMatrix -> <empty>
Rule 65    evaluateHE -> <empty>
Rule 66    opMatrix -> EXCLAMACION addOperator
Rule 67    opMatrix -> INTERROGACION addOperator
Rule 68    opMatrix -> SIGNO_DOLAR addOperator
Rule 69    opHyperExpression -> AND addOperator
Rule 70    opHyperExpression -> OR addOperator
Rule 71    superExpression -> exp evaluateSE opSuperExpression exp evaluateSE
Rule 72    superExpression -> exp evaluateSE
Rule 73    evaluateSE -> <empty>
Rule 74    opSuperExpression -> MAYOR_QUE addOperator
Rule 75    opSuperExpression -> MENOR_QUE addOperator
Rule 76    opSuperExpression -> DIFERENTE_A addOperator
Rule 77    opSuperExpression -> IGUAL_A addOperator
Rule 78    exp -> term evaluateTerm expFunction
Rule 79    exp -> term evaluateTerm
Rule 80    evaluateTerm -> <empty>
Rule 81    expFunction -> MAS addOperator exp
Rule 82    expFunction -> MENOS addOperator exp
Rule 83    term -> factor evaluateFactor termFunction
Rule 84    term -> factor evaluateFactor
Rule 85    evaluateFactor -> <empty>
Rule 86    termFunction -> MULTIPLICA addOperator term
Rule 87    termFunction -> DIVIDE addOperator term
Rule 88    addOperator -> <empty>
Rule 89    factor -> LEFTPAR addFF hyperExpression RIGHTPAR removeFF
Rule 90    factor -> cst_prim
Rule 91    factor -> module
Rule 92    factor -> ID dimArray
Rule 93    addFF -> <empty>
Rule 94    removeFF -> <empty>
Rule 95    read -> LEE LEFTPAR id_list RIGHTPAR PUNTOYCOMA
Rule 96    id_list -> ID dimArray addRead id_listFunction
Rule 97    addRead -> <empty>
Rule 98    id_listFunction -> COMA id_list
Rule 99    id_listFunction -> <empty>
Rule 100   print -> IMPRIME LEFTPAR printFunction RIGHTPAR PUNTOYCOMA
Rule 101   printFunction -> print_param COMA printFunction2
Rule 102   printFunction -> print_param
Rule 103   printFunction2 -> printFunction
Rule 104   print_param -> hyperExpression addPrint
Rule 105   print_param -> CST_STRING addPrintString
Rule 106   addPrint -> <empty>
Rule 107   addPrintString -> <empty>
Rule 108   statement -> return checkVoidType
Rule 109   statement -> if statement
Rule 110   statement -> comment statement
Rule 111   statement -> read statement
Rule 112   statement -> print statement
Rule 113   statement -> assignment statement
Rule 114   statement -> module PUNTOYCOMA statement
Rule 115   statement -> for statement
Rule 116   statement -> while statement
Rule 117   statement -> checkNonVoidType
Rule 118   checkVoidType -> <empty>
Rule 119   checkNonVoidType -> <empty>
Rule 120   module -> ID checkFuncExists genERASize LEFTPAR moduleFunction nullParam RIGHTPAR genGosub
Rule 121   checkFuncExists -> <empty>
Rule 122   genERASize -> <empty>
Rule 123   nullParam -> <empty>
Rule 124   genGosub -> <empty>
Rule 125   moduleFunction -> hyperExpression genParam nextParam COMA moduleFunction
Rule 126   moduleFunction -> hyperExpression genParam
Rule 127   moduleFunction -> <empty>
Rule 128   genParam -> <empty>
Rule 129   nextParam -> <empty>
Rule 130   dimArray -> addOperandId addTypeId LEFTBRACK readIDType hyperExpression verifyRows RIGHTBRACK dimMatrix
Rule 131   dimArray -> addOperandId addTypeId
Rule 132   addOperandId -> <empty>
Rule 133   addTypeId -> <empty>
Rule 134   readIDType -> <empty>
Rule 135   verifyRows -> <empty>
Rule 136   dimMatrix -> LEFTBRACK hyperExpression verifyCols RIGHTBRACK
Rule 137   dimMatrix -> checkMatAsArray
Rule 138   verifyCols -> <empty>
Rule 139   checkMatAsArray -> <empty>

Terminals, with rules where they appear

AND                  : 69
CHAR                 : 14
COMA                 : 34 51 98 101 125
COMMENT_TEXT         : 22
CST_CHAR             : 55
CST_FLOAT            : 54
CST_INT              : 31 36 39 53
CST_STRING           : 105
DIFERENTE_A          : 76
DIVIDE               : 87
ENTONCES             : 16
EXCLAMACION          : 66
FLOAT                : 13
FUNCION              : 44 45
HASTA                : 27
ID                   : 1 7 31 32 42 47 92 96 120
IGUAL                : 7 31
IGUAL_A              : 77
IMPRIME              : 100
INT                  : 12
INTERROGACION        : 67
LEE                  : 95
LEFTBRACE            : 5 16 19 23 27 42
LEFTBRACK            : 36 39 130 136
LEFTPAR              : 5 15 16 23 42 89 95 100 120
MAS                  : 81
MAYOR_QUE            : 74
MENOR_QUE            : 75
MENOS                : 82
MIENTRAS             : 23
MULTIPLICA           : 86
OR                   : 70
PARA                 : 27
PRINCIPAL            : 5
PROGRAMA             : 1
PUNTOYCOMA           : 1 7 10 15 95 100 114
REGRESA              : 15
RIGHTBRACE           : 5 16 19 23 27 42
RIGHTBRACK           : 36 39 130 136
RIGHTPAR             : 5 15 16 23 42 89 95 100 120
SI                   : 16
SIGNO_DOLAR          : 68
SINO                 : 19
VAR                  : 8
VOID                 : 45
error                : 

Nonterminals, with rules where they appear

addFF                : 89
addFuncParams        : 47
addFuncToDir         : 42
addOperandId         : 130 131
addOperator          : 66 67 68 69 70 74 75 76 77 81 82 86 87
addPrint             : 104
addPrintString       : 105
addRead              : 96
addTypeChar          : 55
addTypeFloat         : 54
addTypeId            : 130 131
addTypeInt           : 31 36 39 53
addVarsToTable       : 32
assignment           : 113
beginLoopAction      : 23
checkFuncExists      : 120
checkMatAsArray      : 137
checkNonVoidType     : 117
checkVoidType        : 108
comment              : 110
createJumpQuadElse   : 19
createJumpQuadIf     : 16
createQuadFor        : 27
cst_prim             : 90
declaration          : 1 5 42
declarationPrim      : 8 10
dimArray             : 7 92 96
dimMatrix            : 130
endLoopAction        : 23
evaluateFactor       : 83 84
evaluateHE           : 59 61 62 63
evaluateOpMatrix     : 60
evaluateSE           : 71 71 72
evaluateTerm         : 78 79
exp                  : 71 71 72 81 82
expFunction          : 78
factor               : 83 84
for                  : 115
forAssignment        : 27
function             : 3
functionParam        : 47
functionType         : 42
genERASize           : 120
genGosub             : 120
genParam             : 125 126
globalTable          : 1
hyperExpression      : 7 15 16 23 27 89 104 125 126 130 136
hyperExpressionNested : 59 62
id_list              : 95 98
id_listFunction      : 96
if                   : 109
ifElse               : 16
insertJumpFor        : 27
main                 : 1
mainTable            : 5
module               : 91 114
moduleFunction       : 120 125
nextParam            : 125
nullParam            : 120
opHyperExpression    : 59 62
opMatrix             : 60
opSuperExpression    : 71
param                : 42 51
primitive            : 10 44 47
print                : 112
printFunction        : 100 103
printFunction2       : 101
print_param          : 101 102
program              : 0
programFunc          : 1 3
pushLoopJump         : 23
read                 : 111
readIDType           : 130
removeFF             : 89
return               : 108
setCols              : 39
setParamLength       : 42
setRows              : 36
setVoidType          : 45
statement            : 5 16 19 23 27 42 109 110 111 112 113 114 115 116
superExpression      : 59 60 61 62 63
term                 : 78 79 86 87
termFunction         : 83
updateJumpQuad       : 16
updateQuadFor        : 27
vars                 : 10 34
varsArray            : 32
varsComa             : 32
varsMatrix           : 36
verifyCols           : 136
verifyRows           : 130
while                : 116

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMA ID globalTable PUNTOYCOMA declaration programFunc main

    PROGRAMA        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMA . ID globalTable PUNTOYCOMA declaration programFunc main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAMA ID . globalTable PUNTOYCOMA declaration programFunc main
    (2) globalTable -> .

    PUNTOYCOMA      reduce using rule 2 (globalTable -> .)

    globalTable                    shift and go to state 4

state 4

    (1) program -> PROGRAMA ID globalTable . PUNTOYCOMA declaration programFunc main

    PUNTOYCOMA      shift and go to state 5


state 5

    (1) program -> PROGRAMA ID globalTable PUNTOYCOMA . declaration programFunc main
    (8) declaration -> . VAR declarationPrim
    (9) declaration -> .

    VAR             shift and go to state 7
    FUNCION         reduce using rule 9 (declaration -> .)
    PRINCIPAL       reduce using rule 9 (declaration -> .)

    declaration                    shift and go to state 6

state 6

    (1) program -> PROGRAMA ID globalTable PUNTOYCOMA declaration . programFunc main
    (3) programFunc -> . function programFunc
    (4) programFunc -> .
    (42) function -> . functionType ID addFuncToDir LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE
    (44) functionType -> . FUNCION primitive
    (45) functionType -> . FUNCION VOID setVoidType

    PRINCIPAL       reduce using rule 4 (programFunc -> .)
    FUNCION         shift and go to state 11

    programFunc                    shift and go to state 8
    function                       shift and go to state 9
    functionType                   shift and go to state 10

state 7

    (8) declaration -> VAR . declarationPrim
    (10) declarationPrim -> . primitive vars PUNTOYCOMA declarationPrim
    (11) declarationPrim -> .
    (12) primitive -> . INT
    (13) primitive -> . FLOAT
    (14) primitive -> . CHAR

    FUNCION         reduce using rule 11 (declarationPrim -> .)
    PRINCIPAL       reduce using rule 11 (declarationPrim -> .)
    REGRESA         reduce using rule 11 (declarationPrim -> .)
    SI              reduce using rule 11 (declarationPrim -> .)
    COMMENT_TEXT    reduce using rule 11 (declarationPrim -> .)
    LEE             reduce using rule 11 (declarationPrim -> .)
    IMPRIME         reduce using rule 11 (declarationPrim -> .)
    ID              reduce using rule 11 (declarationPrim -> .)
    PARA            reduce using rule 11 (declarationPrim -> .)
    MIENTRAS        reduce using rule 11 (declarationPrim -> .)
    RIGHTBRACE      reduce using rule 11 (declarationPrim -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    declarationPrim                shift and go to state 12
    primitive                      shift and go to state 13

state 8

    (1) program -> PROGRAMA ID globalTable PUNTOYCOMA declaration programFunc . main
    (5) main -> . mainTable PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE declaration statement RIGHTBRACE
    (6) mainTable -> .

    PRINCIPAL       reduce using rule 6 (mainTable -> .)

    main                           shift and go to state 17
    mainTable                      shift and go to state 18

state 9

    (3) programFunc -> function . programFunc
    (3) programFunc -> . function programFunc
    (4) programFunc -> .
    (42) function -> . functionType ID addFuncToDir LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE
    (44) functionType -> . FUNCION primitive
    (45) functionType -> . FUNCION VOID setVoidType

    PRINCIPAL       reduce using rule 4 (programFunc -> .)
    FUNCION         shift and go to state 11

    function                       shift and go to state 9
    programFunc                    shift and go to state 19
    functionType                   shift and go to state 10

state 10

    (42) function -> functionType . ID addFuncToDir LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE

    ID              shift and go to state 20


state 11

    (44) functionType -> FUNCION . primitive
    (45) functionType -> FUNCION . VOID setVoidType
    (12) primitive -> . INT
    (13) primitive -> . FLOAT
    (14) primitive -> . CHAR

    VOID            shift and go to state 22
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    primitive                      shift and go to state 21

state 12

    (8) declaration -> VAR declarationPrim .

    FUNCION         reduce using rule 8 (declaration -> VAR declarationPrim .)
    PRINCIPAL       reduce using rule 8 (declaration -> VAR declarationPrim .)
    REGRESA         reduce using rule 8 (declaration -> VAR declarationPrim .)
    SI              reduce using rule 8 (declaration -> VAR declarationPrim .)
    COMMENT_TEXT    reduce using rule 8 (declaration -> VAR declarationPrim .)
    LEE             reduce using rule 8 (declaration -> VAR declarationPrim .)
    IMPRIME         reduce using rule 8 (declaration -> VAR declarationPrim .)
    ID              reduce using rule 8 (declaration -> VAR declarationPrim .)
    PARA            reduce using rule 8 (declaration -> VAR declarationPrim .)
    MIENTRAS        reduce using rule 8 (declaration -> VAR declarationPrim .)
    RIGHTBRACE      reduce using rule 8 (declaration -> VAR declarationPrim .)


state 13

    (10) declarationPrim -> primitive . vars PUNTOYCOMA declarationPrim
    (32) vars -> . ID addVarsToTable varsArray varsComa

    ID              shift and go to state 24

    vars                           shift and go to state 23

state 14

    (12) primitive -> INT .

    ID              reduce using rule 12 (primitive -> INT .)


state 15

    (13) primitive -> FLOAT .

    ID              reduce using rule 13 (primitive -> FLOAT .)


state 16

    (14) primitive -> CHAR .

    ID              reduce using rule 14 (primitive -> CHAR .)


state 17

    (1) program -> PROGRAMA ID globalTable PUNTOYCOMA declaration programFunc main .

    $end            reduce using rule 1 (program -> PROGRAMA ID globalTable PUNTOYCOMA declaration programFunc main .)


state 18

    (5) main -> mainTable . PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE declaration statement RIGHTBRACE

    PRINCIPAL       shift and go to state 25


state 19

    (3) programFunc -> function programFunc .

    PRINCIPAL       reduce using rule 3 (programFunc -> function programFunc .)


state 20

    (42) function -> functionType ID . addFuncToDir LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE
    (43) addFuncToDir -> .

    LEFTPAR         reduce using rule 43 (addFuncToDir -> .)

    addFuncToDir                   shift and go to state 26

state 21

    (44) functionType -> FUNCION primitive .

    ID              reduce using rule 44 (functionType -> FUNCION primitive .)


state 22

    (45) functionType -> FUNCION VOID . setVoidType
    (46) setVoidType -> .

    ID              reduce using rule 46 (setVoidType -> .)

    setVoidType                    shift and go to state 27

state 23

    (10) declarationPrim -> primitive vars . PUNTOYCOMA declarationPrim

    PUNTOYCOMA      shift and go to state 28


state 24

    (32) vars -> ID . addVarsToTable varsArray varsComa
    (33) addVarsToTable -> .

    LEFTBRACK       reduce using rule 33 (addVarsToTable -> .)
    COMA            reduce using rule 33 (addVarsToTable -> .)
    PUNTOYCOMA      reduce using rule 33 (addVarsToTable -> .)

    addVarsToTable                 shift and go to state 29

state 25

    (5) main -> mainTable PRINCIPAL . LEFTPAR RIGHTPAR LEFTBRACE declaration statement RIGHTBRACE

    LEFTPAR         shift and go to state 30


state 26

    (42) function -> functionType ID addFuncToDir . LEFTPAR param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE

    LEFTPAR         shift and go to state 31


state 27

    (45) functionType -> FUNCION VOID setVoidType .

    ID              reduce using rule 45 (functionType -> FUNCION VOID setVoidType .)


state 28

    (10) declarationPrim -> primitive vars PUNTOYCOMA . declarationPrim
    (10) declarationPrim -> . primitive vars PUNTOYCOMA declarationPrim
    (11) declarationPrim -> .
    (12) primitive -> . INT
    (13) primitive -> . FLOAT
    (14) primitive -> . CHAR

    FUNCION         reduce using rule 11 (declarationPrim -> .)
    PRINCIPAL       reduce using rule 11 (declarationPrim -> .)
    REGRESA         reduce using rule 11 (declarationPrim -> .)
    SI              reduce using rule 11 (declarationPrim -> .)
    COMMENT_TEXT    reduce using rule 11 (declarationPrim -> .)
    LEE             reduce using rule 11 (declarationPrim -> .)
    IMPRIME         reduce using rule 11 (declarationPrim -> .)
    ID              reduce using rule 11 (declarationPrim -> .)
    PARA            reduce using rule 11 (declarationPrim -> .)
    MIENTRAS        reduce using rule 11 (declarationPrim -> .)
    RIGHTBRACE      reduce using rule 11 (declarationPrim -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    primitive                      shift and go to state 13
    declarationPrim                shift and go to state 32

state 29

    (32) vars -> ID addVarsToTable . varsArray varsComa
    (36) varsArray -> . LEFTBRACK CST_INT addTypeInt RIGHTBRACK setRows varsMatrix
    (37) varsArray -> .

    LEFTBRACK       shift and go to state 34
    COMA            reduce using rule 37 (varsArray -> .)
    PUNTOYCOMA      reduce using rule 37 (varsArray -> .)

    varsArray                      shift and go to state 33

state 30

    (5) main -> mainTable PRINCIPAL LEFTPAR . RIGHTPAR LEFTBRACE declaration statement RIGHTBRACE

    RIGHTPAR        shift and go to state 35


state 31

    (42) function -> functionType ID addFuncToDir LEFTPAR . param RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE
    (47) param -> . primitive ID addFuncParams functionParam
    (48) param -> .
    (12) primitive -> . INT
    (13) primitive -> . FLOAT
    (14) primitive -> . CHAR

    RIGHTPAR        reduce using rule 48 (param -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    param                          shift and go to state 36
    primitive                      shift and go to state 37

state 32

    (10) declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .

    FUNCION         reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    PRINCIPAL       reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    REGRESA         reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    SI              reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    COMMENT_TEXT    reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    LEE             reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    IMPRIME         reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    ID              reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    PARA            reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    MIENTRAS        reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)
    RIGHTBRACE      reduce using rule 10 (declarationPrim -> primitive vars PUNTOYCOMA declarationPrim .)


state 33

    (32) vars -> ID addVarsToTable varsArray . varsComa
    (34) varsComa -> . COMA vars
    (35) varsComa -> .

    COMA            shift and go to state 39
    PUNTOYCOMA      reduce using rule 35 (varsComa -> .)

    varsComa                       shift and go to state 38

state 34

    (36) varsArray -> LEFTBRACK . CST_INT addTypeInt RIGHTBRACK setRows varsMatrix

    CST_INT         shift and go to state 40


state 35

    (5) main -> mainTable PRINCIPAL LEFTPAR RIGHTPAR . LEFTBRACE declaration statement RIGHTBRACE

    LEFTBRACE       shift and go to state 41


state 36

    (42) function -> functionType ID addFuncToDir LEFTPAR param . RIGHTPAR setParamLength LEFTBRACE declaration statement RIGHTBRACE

    RIGHTPAR        shift and go to state 42


state 37

    (47) param -> primitive . ID addFuncParams functionParam

    ID              shift and go to state 43


state 38

    (32) vars -> ID addVarsToTable varsArray varsComa .

    PUNTOYCOMA      reduce using rule 32 (vars -> ID addVarsToTable varsArray varsComa .)


state 39

    (34) varsComa -> COMA . vars
    (32) vars -> . ID addVarsToTable varsArray varsComa

    ID              shift and go to state 24

    vars                           shift and go to state 44

state 40

    (36) varsArray -> LEFTBRACK CST_INT . addTypeInt RIGHTBRACK setRows varsMatrix
    (56) addTypeInt -> .

    RIGHTBRACK      reduce using rule 56 (addTypeInt -> .)

    addTypeInt                     shift and go to state 45

state 41

    (5) main -> mainTable PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE . declaration statement RIGHTBRACE
    (8) declaration -> . VAR declarationPrim
    (9) declaration -> .

    VAR             shift and go to state 7
    REGRESA         reduce using rule 9 (declaration -> .)
    SI              reduce using rule 9 (declaration -> .)
    COMMENT_TEXT    reduce using rule 9 (declaration -> .)
    LEE             reduce using rule 9 (declaration -> .)
    IMPRIME         reduce using rule 9 (declaration -> .)
    ID              reduce using rule 9 (declaration -> .)
    PARA            reduce using rule 9 (declaration -> .)
    MIENTRAS        reduce using rule 9 (declaration -> .)
    RIGHTBRACE      reduce using rule 9 (declaration -> .)

    declaration                    shift and go to state 46

state 42

    (42) function -> functionType ID addFuncToDir LEFTPAR param RIGHTPAR . setParamLength LEFTBRACE declaration statement RIGHTBRACE
    (50) setParamLength -> .

    LEFTBRACE       reduce using rule 50 (setParamLength -> .)

    setParamLength                 shift and go to state 47

state 43

    (47) param -> primitive ID . addFuncParams functionParam
    (49) addFuncParams -> .

    COMA            reduce using rule 49 (addFuncParams -> .)
    RIGHTPAR        reduce using rule 49 (addFuncParams -> .)

    addFuncParams                  shift and go to state 48

state 44

    (34) varsComa -> COMA vars .

    PUNTOYCOMA      reduce using rule 34 (varsComa -> COMA vars .)


state 45

    (36) varsArray -> LEFTBRACK CST_INT addTypeInt . RIGHTBRACK setRows varsMatrix

    RIGHTBRACK      shift and go to state 49


state 46

    (5) main -> mainTable PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE declaration . statement RIGHTBRACE
    (108) statement -> . return checkVoidType
    (109) statement -> . if statement
    (110) statement -> . comment statement
    (111) statement -> . read statement
    (112) statement -> . print statement
    (113) statement -> . assignment statement
    (114) statement -> . module PUNTOYCOMA statement
    (115) statement -> . for statement
    (116) statement -> . while statement
    (117) statement -> . checkNonVoidType
    (15) return -> . REGRESA LEFTPAR hyperExpression RIGHTPAR PUNTOYCOMA
    (16) if -> . SI LEFTPAR hyperExpression RIGHTPAR createJumpQuadIf ENTONCES LEFTBRACE statement RIGHTBRACE ifElse updateJumpQuad
    (22) comment -> . COMMENT_TEXT
    (95) read -> . LEE LEFTPAR id_list RIGHTPAR PUNTOYCOMA
    (100) print -> . IMPRIME LEFTPAR printFunction RIGHTPAR PUNTOYCOMA
    (7) assignment -> . ID dimArray IGUAL hyperExpression PUNTOYCOMA
    (120) module -> . ID checkFuncExists genERASize LEFTPAR moduleFunction nullParam RIGHTPAR genGosub
    (27) for -> . PARA forAssignment HASTA insertJumpFor hyperExpression createQuadFor LEFTBRACE statement RIGHTBRACE updateQuadFor
    (23) while -> . MIENTRAS pushLoopJump LEFTPAR hyperExpression RIGHTPAR beginLoopAction LEFTBRACE statement RIGHTBRACE endLoopAction
    (119) checkNonVoidType -> .

    REGRESA         shift and go to state 61
    SI              shift and go to state 62
    COMMENT_TEXT    shift and go to state 63
    LEE             shift and go to state 64
    IMPRIME         shift and go to state 65
    ID              shift and go to state 66
    PARA            shift and go to state 67
    MIENTRAS        shift and go to state 68
    RIGHTBRACE      reduce using rule 119 (checkNonVoidType -> .)

    statement                      shift and go to state 50
    return                         shift and go to state 51
    if                             shift and go to state 52
    comment                        shift and go to state 53
    read                           shift and go to state 54
    print                          shift and go to state 55
    assignment                     shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59
    checkNonVoidType               shift and go to state 60

state 47

    (42) function -> functionType ID addFuncToDir LEFTPAR param RIGHTPAR setParamLength . LEFTBRACE declaration statement RIGHTBRACE

    LEFTBRACE       shift and go to state 69


state 48

    (47) param -> primitive ID addFuncParams . functionParam
    (51) functionParam -> . COMA param
    (52) functionParam -> .

    COMA            shift and go to state 71
    RIGHTPAR        reduce using rule 52 (functionParam -> .)

    functionParam                  shift and go to state 70

state 49

    (36) varsArray -> LEFTBRACK CST_INT addTypeInt RIGHTBRACK . setRows varsMatrix
    (38) setRows -> .

    LEFTBRACK       reduce using rule 38 (setRows -> .)
    COMA            reduce using rule 38 (setRows -> .)
    PUNTOYCOMA      reduce using rule 38 (setRows -> .)

    setRows                        shift and go to state 72

state 50

    (5) main -> mainTable PRINCIPAL LEFTPAR RIGHTPAR LEFTBRACE declaration statement . RIGHTBRACE

    RIGHTBRACE      shift and go to state 73


state 51

    (108) statement -> return . checkVoidType
    (118) checkVoidType -> .

    RIGHTBRACE      reduce using rule 118 (checkVoidType -> .)

    checkVoidType                  shift and go to state 74

state 52

    (109) statement -> if . statement
    (108) statement -> . return checkVoidType
    (109) statement -> . if statement
    (110) statement -> . comment statement
    (111) statement -> . read statement
    (112) statement -> . print statement
    (113) statement -> . assignment statement
    (114) statement -> . module PUNTOYCOMA statement
    (115) statement -> . for statement
    (116) statement -> . while statement
    (117) statement -> . checkNonVoidType
    (15) return -> . REGRESA LEFTPAR hyperExpression RIGHTPAR PUNTOYCOMA
    (16) if -> . SI LEFTPAR hyperExpression RIGHTPAR createJumpQuadIf ENTONCES LEFTBRACE statement RIGHTBRACE ifElse updateJumpQuad
    (22) comment -> . COMMENT_TEXT
    (95) read -> . LEE LEFTPAR id_list RIGHTPAR PUNTOYCOMA
    (100) print -> . IMPRIME LEFTPAR printFunction RIGHTPAR PUNTOYCOMA
    (7) assignment -> . ID dimArray IGUAL hyperExpression PUNTOYCOMA
    (120) module -> . ID checkFuncExists genERASize LEFTPAR moduleFunction nullParam RIGHTPAR genGosub
    (27) for -> . PARA forAssignment HASTA insertJumpFor hyperExpression createQuadFor LEFTBRACE statement RIGHTBRACE updateQuadFor
    (23) while -> . MIENTRAS pushLoopJump LEFTPAR hyperExpression RIGHTPAR beginLoopAction LEFTBRACE statement RIGHTBRACE endLoopAction
    (119) checkNonVoidType -> .

    REGRESA         shift and go to state 61
    SI              shift and go to state 62
    COMMENT_TEXT    shift and go to state 63
    LEE             shift and go to state 64
    IMPRIME         shift and go to state 65
    ID              shift and go to state 66
    PARA            shift and go to state 67
    MIENTRAS        shift and go to state 68
    RIGHTBRACE      reduce using rule 119 (checkNonVoidType -> .)

    if                             shift and go to state 52
    statement                      shift and go to state 75
    return                         shift and go to state 51
    comment                        shift and go to state 53
    read                           shift and go to state 54
    print                          shift and go to state 55
    assignment                     shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59
    checkNonVoidType               shift and go to state 60

state 53

    (110) statement -> comment . statement
    (108) statement -> . return checkVoidType
    (109) statement -> . if statement
    (110) statement -> . comment statement
    (111) statement -> . read statement
    (112) statement -> . print statement
    (113) statement -> . assignment statement
    (114) statement -> . module PUNTOYCOMA statement
    (115) statement -> . for statement
    (116) statement -> . while statement
    (117) statement -> . checkNonVoidType
    (15) return -> . REGRESA LEFTPAR hyperExpression RIGHTPAR PUNTOYCOMA
    (16) if -> . SI LEFTPAR hyperExpression RIGHTPAR createJumpQuadIf ENTONCES LEFTBRACE statement RIGHTBRACE ifElse updateJumpQuad
    (22) comment -> . COMMENT_TEXT
    (95) read -> . LEE LEFTPAR id_list RIGHTPAR PUNTOYCOMA
    (100) print -> . IMPRIME LEFTPAR printFunction RIGHTPAR PUNTOYCOMA
    (7) assignment -> . ID dimArray IGUAL hyperExpression PUNTOYCOMA
    (120) module -> . ID checkFuncExists genERASize LEFTPAR moduleFunction nullParam RIGHTPAR genGosub
    (27) for -> . PARA forAssignment HASTA insertJumpFor hyperExpression createQuadFor LEFTBRACE statement RIGHTBRACE updateQuadFor
    (23) while -> . MIENTRAS pushLoopJump LEFTPAR hyperExpression RIGHTPAR beginLoopAction LEFTBRACE statement RIGHTBRACE endLoopAction
    (119) checkNonVoidType -> .

    REGRESA         shift and go to state 61
    SI              shift and go to state 62
    COMMENT_TEXT    shift and go to state 63
    LEE             shift and go to state 64
    IMPRIME         shift and go to state 65
    ID              shift and go to state 66
    PARA            shift and go to state 67
    MIENTRAS        shift and go to state 68
    RIGHTBRACE      reduce using rule 119 (checkNonVoidType -> .)
